--- a/src/ui/DetailsPanel.ui
+++ b/src/ui/DetailsPanel.ui
@@ -30,7 +30,11 @@
             <property name="width-request">200</property>
             <property name="height-request">200</property>
             <property name="pixel-size">128</property>
+            <property name="margin-bottom">24</property>
             <property name="file" bind-source="IcoDetailsPanel" bind-property="filepath" bind-flags="sync-create" />
+            <style>
+              <class name="icon-grid__image" />
+            </style>
           </object>
         </child>
 
