--- a/src/ui/MainPanelView.ui
+++ b/src/ui/MainPanelView.ui
@@ -7,7 +7,7 @@
 			</object>
 		</property>
     <child>
-      <object class="GtkBox">
+      <object class="GtkBox" id="container">
         <property name="orientation">vertical</property>
         <property name="margin-start">16</property>
         <property name="margin-end">16</property>
