--- a/src/ui/IconTile.ui
+++ b/src/ui/IconTile.ui
@@ -15,20 +15,7 @@
           <class name="card--icon"/>
         </style>
         <child>
-          <object class="GtkImage">
-            <property name="margin-top">8</property>
-            <property name="margin-bottom">8</property>
-            <property name="pixel-size">24</property>
-            <property name="file" bind-source="IcoIconTile" bind-property="filepath" bind-flags="sync-create" />
-            <property name="vexpand">true</property>
-            <property name="hexpand">true</property>
-            <style>
-              <class name="icon-grid__image"/>
-            </style>
-          </object>
-        </child>
-        <child>
-          <object class="GtkLabel">
+          <object class="GtkLabel" id="icon_label">
             <property name="label" bind-source="IcoIconTile" bind-property="label" bind-flags="sync-create" />
             <property name="max-width-chars">10</property>
             <property name="width-chars">10</property>
