--- a/src/ui/MainPanelView.ui
+++ b/src/ui/MainPanelView.ui
@@ -7,51 +7,121 @@
 			</object>
 		</property>
     <child>
-      <object class="GtkBox" id="container">
-        <property name="orientation">vertical</property>
-        <property name="margin-start">16</property>
-        <property name="margin-end">16</property>
-        <property name="margin-top">16</property>
-        <property name="margin-bottom">16</property>
+      <object class="GtkStack" id="main_stack">
         <child>
-          <object class="GtkLabel">
-            <property name="label">Carbon</property>
-            <property name="halign">1</property>
-            <style>
-		          <class name="title-1"/>
-	          </style>
+          <object class="GtkStackPage" id="page_all_sets">
+            <property name="name">all_sets</property>
+            <property name="title" translatable="true">All sets</property>
+            <property name="child">
+              <object class="GtkBox" id="all_sets_container">
+                <property name="orientation">vertical</property>
+                <child>
+                  <object class="GtkLabel">
+                    <property name="label">All sets</property>
+                    <property name="valign">1</property>
+                    <style>
+                      <class name="title-1"/>
+                    </style>
+                  </object>
+                </child>
+                <child>
+                  <object class="GtkFlowBox" id="all_icons_flowbox">
+                    <property name="orientation">0</property>
+                    <property name="row-spacing">6</property>
+                    <property name="column-spacing">6</property>
+                    <property name="homogeneous">false</property>
+                    <property name="max-children-per-line">-1</property>
+                    <property name="min-children-per-line">1</property>
+                    <property name="selection-mode">single</property>
+                    <property name="vexpand">0</property>
+                    <signal name="child-activated" handler="onSetActivated"/>
+                    <child>
+                      <object class="GtkLabel">
+                        <property name="label">All sets</property>
+                        <property name="valign">1</property>
+                        <style>
+                          <class name="title-1"/>
+                        </style>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="GtkLabel">
+                        <property name="label">All sets</property>
+                        <property name="valign">1</property>
+                        <style>
+                          <class name="title-1"/>
+                        </style>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="GtkLabel">
+                        <property name="label">All sets</property>
+                        <property name="valign">1</property>
+                        <style>
+                          <class name="title-1"/>
+                        </style>
+                      </object>
+                    </child>
+                  </object>
+                </child>
+              </object>
+            </property>
           </object>
         </child>
         <child>
-          <object class="GtkLabel">
-            <property name="label">2,225 icons</property>
-            <property name="halign">1</property>
-            <style>
-              <class name="opacity-7"/>
-	          </style>
-          </object>
-        </child>
-        <child>
-          <object class="GtkLabel">
-            <property name="label">MIT licence</property>
-            <property name="halign">1</property>
-            <style>
-              <class name="opacity-7"/>
-  		          <class name="mb-8"/>
-	          </style>
-          </object>
-        </child>
-        <child>
-          <object class="GtkFlowBox" id="iconsFlowbox">
-            <property name="orientation">0</property>
-            <property name="row-spacing">6</property>
-            <property name="column-spacing">6</property>
-            <property name="homogeneous">false</property>
-            <property name="max-children-per-line">-1</property>
-            <property name="min-children-per-line">1</property>
-            <property name="selection-mode">single</property>
-            <property name="vexpand">0</property>
-            <signal name="child-activated" handler="onIconActivated"/>
+          <object class="GtkStackPage" id="page_set_1">
+            <!-- Dynamically generate a new stack page for each icon set -->
+            <property name="name">set_1</property>
+            <property name="child">
+              <object class="GtkBox" id="container">
+                <property name="orientation">vertical</property>
+                <property name="margin-start">16</property>
+                <property name="margin-end">16</property>
+                <property name="margin-top">16</property>
+                <property name="margin-bottom">16</property>
+                <child>
+                  <object class="GtkLabel">
+                    <property name="label">Carbon</property>
+                    <property name="halign">1</property>
+                    <style>
+		                  <class name="title-1"/>
+	                  </style>
+                  </object>
+                </child>
+                <child>
+                  <object class="GtkLabel">
+                    <property name="label">2,225 icons</property>
+                    <property name="halign">1</property>
+                    <style>
+                      <class name="opacity-7"/>
+	                  </style>
+                  </object>
+                </child>
+                <child>
+                  <object class="GtkLabel">
+                    <property name="label">MIT licence</property>
+                    <property name="halign">1</property>
+                    <style>
+                      <class name="opacity-7"/>
+          		          <class name="mb-8"/>
+	                  </style>
+                  </object>
+                </child>
+                <child>
+                  <object class="GtkFlowBox" id="iconsFlowbox">
+                    <property name="orientation">0</property>
+                    <property name="row-spacing">6</property>
+                    <property name="column-spacing">6</property>
+                    <property name="homogeneous">false</property>
+                    <property name="max-children-per-line">-1</property>
+                    <property name="min-children-per-line">1</property>
+                    <property name="selection-mode">single</property>
+                    <property name="vexpand">0</property>
+                    <signal name="child-activated" handler="onIconActivated"/>
+                  </object>
+                </child>
+              </object>
+            </property>
           </object>
         </child>
       </object>
