--- a/src/ui/SidebarView.ui
+++ b/src/ui/SidebarView.ui
@@ -8,7 +8,8 @@
 		</property>
     <child>
       <object class="GtkStackSidebar" id="main_stack_sidebar">
-
+        <property name="vexpand">true</property>
+        <property name="valign">0</property>
       </object>
     </child>
     <child>
