--- a/src/ui/MainPanelView.ui
+++ b/src/ui/MainPanelView.ui
@@ -17,58 +17,7 @@
             <property name="child">
               <object class="GtkScrolledWindow">
                 <child>
-                  <object class="GtkBox" id="all_sets_container">
-                    <property name="orientation">vertical</property>
-                    <child>
-                      <object class="GtkLabel">
-                        <property name="label">All sets</property>
-                        <property name="valign">1</property>
-                        <style>
-                          <class name="title-1"/>
-                        </style>
-                      </object>
-                    </child>
-                    <child>
-                      <object class="GtkFlowBox" id="all_icons_flowbox">
-                        <property name="orientation">0</property>
-                        <property name="row-spacing">6</property>
-                        <property name="column-spacing">6</property>
-                        <property name="homogeneous">false</property>
-                        <property name="max-children-per-line">-1</property>
-                        <property name="min-children-per-line">1</property>
-                        <property name="selection-mode">single</property>
-                        <property name="vexpand">0</property>
-                        <signal name="child-activated" handler="onSetActivated"/>
-                        <child>
-                          <object class="GtkLabel">
-                            <property name="label">All sets</property>
-                            <property name="valign">1</property>
-                            <style>
-                              <class name="title-1"/>
-                            </style>
-                          </object>
-                        </child>
-                        <child>
-                          <object class="GtkLabel">
-                            <property name="label">All sets</property>
-                            <property name="valign">1</property>
-                            <style>
-                              <class name="title-1"/>
-                            </style>
-                          </object>
-                        </child>
-                        <child>
-                          <object class="GtkLabel">
-                            <property name="label">All sets</property>
-                            <property name="valign">1</property>
-                            <style>
-                              <class name="title-1"/>
-                            </style>
-                          </object>
-                        </child>
-                      </object>
-                    </child>
-                  </object>
+                  <object class="IcoAllSetsStackView"></object>
                 </child>
               </object>
             </property>
