--- a/src/ui/AllSetsStackView.ui
+++ b/src/ui/AllSetsStackView.ui
@@ -7,34 +7,39 @@
 			</object>
 		</property>
     <child>
-      <object class="GtkBox" id="all_sets_container">
-        <property name="orientation">vertical</property>
-        <property name="orientation">vertical</property>
-        <property name="margin-start">16</property>
-        <property name="margin-end">16</property>
-        <property name="margin-top">16</property>
-        <property name="margin-bottom">16</property>
+      <object class="GtkScrolledWindow">
+        <property name="vexpand">true</property>
         <child>
-          <object class="GtkLabel">
-            <property name="label">All sets</property>
-            <property name="halign">1</property>
-            <style>
-              <class name="title-1"/>
-              <class name="mb-8"/>
-            </style>
-          </object>
-        </child>
-        <child>
-          <object class="GtkFlowBox" id="sets_flowbox">
-            <property name="orientation">0</property>
-            <property name="row-spacing">16</property>
-            <property name="column-spacing">16</property>
-            <property name="homogeneous">true</property>
-            <property name="max-children-per-line">-1</property>
-            <property name="min-children-per-line">1</property>
-            <property name="selection-mode">single</property>
-            <property name="vexpand">0</property>
-            <signal name="child-activated" handler="onSetActivated"/>
+          <object class="GtkBox" id="all_sets_container">
+            <property name="orientation">vertical</property>
+            <property name="orientation">vertical</property>
+            <property name="margin-start">16</property>
+            <property name="margin-end">16</property>
+            <property name="margin-top">16</property>
+            <property name="margin-bottom">16</property>
+            <child>
+              <object class="GtkLabel">
+                <property name="label">All sets</property>
+                <property name="halign">1</property>
+                <style>
+                  <class name="title-1"/>
+                  <class name="mb-8"/>
+                </style>
+              </object>
+            </child>
+            <child>
+              <object class="GtkFlowBox" id="sets_flowbox">
+                <property name="orientation">0</property>
+                <property name="row-spacing">16</property>
+                <property name="column-spacing">16</property>
+                <property name="homogeneous">true</property>
+                <property name="max-children-per-line">-1</property>
+                <property name="min-children-per-line">1</property>
+                <property name="selection-mode">single</property>
+                <property name="vexpand">0</property>
+                <signal name="child-activated" handler="onSetActivated"/>
+              </object>
+            </child>
           </object>
         </child>
       </object>
