--- a/src/ui/Window.ui
+++ b/src/ui/Window.ui
@@ -72,10 +72,11 @@
         </property>
         <property name="content">
           <object class="AdwNavigationPage" id="container">
-            <property name="title" translatable="true">Icon thumbnails</property>
-            <property name="tag">content</property>
+            <property name="title" translatable="true">Icon grid</property>
+            <property name="tag">icon_grid</property>
             <property name="child">
               <object class="AdwToolbarView">
+                <property name="top-bar-style">raised</property>
                 <child type="top">
                   <object class="AdwHeaderBar">
                     <property name="title-widget">
@@ -93,18 +94,19 @@
                       </object>
                     </property>
 
-                    <child type="start">
+                    <!-- <child type="start">
                       <object class="GtkMenuButton">
                         <property name="label">24px</property>
                         <property name="always-show-arrow">true</property>
                         <property name="tooltip-text" translatable="true">Icon Size</property>
                         <property name="popover">icon_size_popover</property>
                       </object>
-                    </child>
+                    </child> -->
 
                     <child type="end">
                       <object class="GtkToggleButton" id="show_details_sidebar_button">
-                        <property name="active" bind-source="details_view" bind-property="show-sidebar" bind-flags="sync-create" />
+                        <!-- TODO: fix this button
+                        <property name="active" bind-source="details_view" bind-property="show-sidebar" bind-flags="sync-create" /> -->
                         <property name="icon-name">sidebar-show-right-symbolic</property>
                         <property name="tooltip-text" translatable="true">Toggle Icon Detail Sidebar</property>
 
@@ -117,35 +119,25 @@
 
                 <property name="content">
                   <!-- Put the main stack here -->
-
-                    <!-- Put the All Sets stack page here-->
-
-                    <!-- Make this below object a composite widget that acts as a template for single icon set stack pages -->
-                  <object class="AdwOverlaySplitView" id="details_view">
-                    <property name="show-sidebar" bind-source="show_details_sidebar_button" bind-property="active" bind-flags="sync-create" />
-                    <property name="sidebar-position">1</property>
-                    <property name="content">
-                      <object class="AdwToastOverlay" id="toast_overlay">
-                        <child>
-                          <object class="IcoMainPanelView" id="main_panel">
-                            <signal name="icon-activated" handler="onIconActivated" />
-                            <property name="icons" bind-source="IcoWindow" bind-property="currentSetIcons" bind-flags="sync-create" />
-                          </object>
-                        </child>
+                  <object class="GtkStack" id="main_stack">
+                    <child>
+                      <object class="GtkStackPage">
+                        <property name="title">All sets</property>
+                        <property name="name">all_sets</property>
+                        <property name="child">
+                          <object class="IcoAllSetsStackView" id="all_sets_view"></object>
+                        </property>
                       </object>
-                    </property>
-                    <property name="sidebar">
-                      <object class="GtkScrolledWindow">
-                        <property name="min-content-width">250</property>
-                        <property name="max-content-width">300</property>
-                        <child>
-                          <object class="IcoDetailsPanel" id="details_panel">
-                            <property name="filepath"></property>
-                            <property name="label">Test label coming in</property>
-                          </object>
-                        </child>
+                    </child>
+                    <child>
+                      <object class="GtkStackPage">
+                        <property name="title">Example set</property>
+                        <property name="name">example_set</property>
+                        <property name="child">
+                          <object class="IcoIconSetStackView" id="set_view"></object>
+                        </property>
                       </object>
-                    </property>
+                    </child>
                   </object>
                 </property>
               </object>
