--- a/src/ui/Window.ui
+++ b/src/ui/Window.ui
@@ -105,9 +105,10 @@
 
                     <child type="end">
                       <object class="GtkToggleButton" id="show_details_sidebar_button">
-                        <property name="active" bind-source="IcoWindow" bind-property="sidebarVisible" bind-flags="bidirectional" />
+                        <property name="active" bind-source="IcoWindow" bind-property="sidebarVisible" bind-flags="sync-create" />
                         <property name="icon-name">sidebar-show-right-symbolic</property>
                         <property name="tooltip-text" translatable="true">Toggle Icon Detail Sidebar</property>
+                        <signal name="toggled" handler="onDetailsSidebarToggled"/>
 
 
                       </object>
